--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "~3.3.5",
-    "knockout": "~3.4.0"
+    "knockout": "~3.4.0",
+    "font-awesome": "fontawesome#~4.4.0"
   },
   "overrides": {
     "bootstrap": {
