Fixing, inserted streetview inside infoHtml, font-awesome

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "bootstrap": "~3.3.5",
     "knockout": "~3.4.0",
-    "font-awesome": "fontawesome#~4.4.0"
+    "font-awesome": "~4.4.0"
   },
   "overrides": {
     "bootstrap": {
